# kopiur

./: .dockerignore  .editorconfig  .gitignore  .krew.yaml  .lefthook.toml  .prettierignore  .renovaterc.json5  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  book.toml  deny.toml  justfile  mkdocs.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yaml  docs.yaml  e2e.yaml  e2e.yml  lint.yaml  release.yaml  release.yml  renovate.yaml  tests.yaml
.mise/: config.toml
crates/api/: Cargo.toml  README.md
crates/api/src/: backend.rs  backup.rs  backup_config.rs  backup_schedule.rs  cluster_repository.rs  common.rs  consts.rs  creds.rs  duration.rs  error.rs  identity.rs  jitter.rs  lib.rs  maintenance.rs  repository.rs  repository_replication.rs  restore.rs  retention.rs  server.rs  snapshot.rs  snapshot_policy.rs  snapshot_schedule.rs  success_expr.rs  validate.rs
crates/api/tests/: examples_match_crd_shapes.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  consts.rs  context.rs  error.rs  lib.rs  main.rs  output.rs  wait.rs
crates/cli/src/cmd/: doctor.rs  logs.rs  maintenance.rs  mod.rs  restore.rs  snapshot.rs  snapshots.rs  status.rs  suspend.rs
crates/cli/src/cmd/browse/: local.rs  mod.rs  resolve.rs  session.rs
crates/cli/src/cmd/migrate/: kopia.rs  mod.rs  translate.rs  volsync_types.rs
crates/controller/: Cargo.toml  README.md
crates/controller/src/: backup.rs  backup_config.rs  backup_schedule.rs  cache.rs  catalog.rs  cluster_repository.rs  config.rs  consts.rs  context.rs  error.rs  hooks.rs  io.rs  jobs.rs  lib.rs  main.rs  maintenance.rs  metrics.rs  repository.rs  repository_replication.rs  restore.rs  server.rs  snapshot.rs  snapshot_policy.rs  snapshot_schedule.rs  verification.rs  watch.rs  webhook_tls.rs
crates/controller/src/io/: apply.rs  colocation.rs  creds.rs  events.rs  finalizer.rs  maintenance.rs  mod.rs  mover.rs  repo.rs  server.rs  staging.rs  tests.rs
crates/controller/tests/: integration.rs
crates/e2e/: Cargo.toml  README.md  mise.toml
crates/e2e/manifests/csi-snapshot/: 01-crd-volumesnapshotclasses.yaml  02-crd-volumesnapshotcontents.yaml  03-crd-volumesnapshots.yaml  04-rbac-snapshot-controller.yaml  10-hostpath-driverinfo.yaml  20-rbac-provisioner.yaml  23-rbac-resizer.yaml  29-hostpath-plugin.yaml  README.md
crates/e2e/src/: apply.rs  builders.rs  cli.rs  consts.rs  lib.rs  wait.rs  world.rs
crates/e2e/tests/: adr_0004_0005.rs  backends.rs  cache_and_events.rs  cli.rs  colocation.rs  copy_methods.rs  credential_projection.rs  cross_namespace.rs  data_integrity.rs  hooks.rs  import.rs  lifecycle.rs  mover_config.rs  object_store.rs  observability.rs  policy_knobs.rs  replication.rs  repository_lifecycle.rs  restore.rs  retention.rs  steady_state.rs  tenancy.rs  terminal_failure.rs  ttl_rerun.rs  verification.rs  webhook.rs  workload_identity.rs
crates/e2e/tests/common/: mod.rs
crates/kopia/: Cargo.toml  README.md
crates/kopia/src/: client.rs  env.rs  error.rs  lib.rs  model.rs  session.rs
crates/kopia/tests/: fake_shim.rs  fixtures_parse.rs  integration_roundtrip.rs
crates/kopia/tests/fixtures/: maintenance_info.json  repository_status.json  snapshot_create.json  snapshot_list.json
crates/mover/: Cargo.toml  README.md
crates/mover/src/: bootstrap.rs  credentials.rs  env.rs  error.rs  jobs.rs  lib.rs  main.rs  repo_meta.rs  serve.rs  status.rs  workspec.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/src/: env.rs  error.rs  lib.rs
crates/webhook/: Cargo.toml  README.md
crates/webhook/src/: config.rs  error.rs  handlers.rs  identity_collision.rs  lib.rs  main.rs  metrics.rs  routes.rs  tenancy.rs
crates/webhook/tests/: integration.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: artifact.rs  crds.rs  dashboards.rs  lib.rs  main.rs  paths.rs  rbac.rs
crates/xtask/tests/: crds.rs  drift.rs  integration.rs  rbac.rs  snapshots_test.rs
crates/xtask/tests/snapshots/: snapshots_test__backup_crd.snap  snapshots_test__backup_crd.snap.new  snapshots_test__repository_crd.snap  snapshots_test__repository_crd.snap.new  snapshots_test__repository_replication_crd.snap  snapshots_test__snapshot_crd.snap
deploy/: observability-values.yaml
deploy/crds/: all-crds.yaml  backupconfigs.yaml  backups.yaml  backupschedules.yaml  clusterrepositories.yaml  maintenances.yaml  repositories.yaml  repositoryreplications.yaml  restores.yaml  snapshotpolicies.yaml  snapshots.yaml  snapshotschedules.yaml
deploy/dashboards/: kopiur.json
deploy/e2e/: values.yaml
deploy/examples/: 01-single-pvc-scheduled.yaml  02-cluster-repository.yaml  03-restore-by-backup.yaml  04-multi-pvc-selector.yaml  05-deploy-or-restore-gitops.yaml  06-manual-backup.yaml  07-restore-discovered.yaml  08-maintenance.yaml  09-mover-permissions.yaml  10-nfs-source.yaml  11-credential-projection.yaml  12-restore-mover-cache.yaml  13-restore-by-identity.yaml  14-restore-point-in-time.yaml  15-restore-in-place-mirror.yaml  16-restore-cross-namespace.yaml  17-restore-shared-repo-projection.yaml  18-inherit-security-context.yaml  19-repository-replication.yaml  20-backup-with-hooks.yaml  21-copy-method-snapshot.yaml  22-copy-method-clone.yaml  23-copy-method-direct.yaml  24-rwop-snapshot-backup.yaml  25-repository-server-ui.yaml  observability-values.yaml
deploy/rbac/: mover-clusterrole.yaml  mover-role.yaml  operator-clusterrole.yaml  operator-role.yaml
dev/patches/: kopia-ui-deployment.patch  kopia-ui-deployment2.patch
docker/: Dockerfile  Dockerfile.mover
docs/: SUMMARY.md  access-modes.md  api-reference.md  backends.md  backups.md  configuration.md  copy-methods.md  examples.md  field-reference.md  getting-started.md  gitops.md  index.md  install.md  introduction.md  maintenance.md  movers.md  permissions.md  rbac.md  replication.md  repositories.md  restores.md  security-context.md  server.md  troubleshooting.md  walkthrough.md
docs/adr/: 0001-onedr0p-kopia-operator.md  (+4 more)
plugins/: README.md  kopiur.yaml
scripts/: build-docs.sh  with-e2e.sh  with-kind.sh
(+105 files in other folders)
