[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/kopia",
    "crates/telemetry",
    "crates/webhook",
    "crates/controller",
    "crates/mover",
    "crates/xtask",
    "crates/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
repository = "https://github.com/home-operations/kopiur"
authors = ["kopiur contributors"]

[workspace.dependencies]
# Internal crates
kopiur-api = { path = "crates/api" }
kopiur-kopia = { path = "crates/kopia" }
kopiur-mover = { path = "crates/mover" }
kopiur-telemetry = { path = "crates/telemetry" }

# Kubernetes / controller-runtime
kube = { version = "3.1", default-features = false }
k8s-openapi = { version = "0.27", default-features = false, features = ["schemars"] }
schemars = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "signal"] }
futures = "0.3"

# Web / webhook
axum = "0.8"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tower = "0.5"
json-patch = "4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
# OpenTelemetry / OTLP. Matrix confirmed to compile on Rust 1.95 with the
# prometheus 0.14 pin above (opentelemetry-prometheus 0.31 shares it). OTLP
# export is runtime/env-gated; these add no behavior unless an endpoint is set.
opentelemetry = { version = "0.31", features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "metrics",
    "trace",
    "logs",
    "experimental_metrics_custom_reader",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "grpc-tonic",
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-prometheus = "0.31"
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
url = "2"

# Scheduling / templating
croner = "2"
tera = "1"

# Self-managed webhook TLS (the `tls.mode: self` chart path): the controller
# mints its own CA + serving leaf instead of depending on cert-manager. MSRV
# 1.88 (< our 1.95 pin); `x509-parser` enables `Issuer::from_ca_cert_pem` so a
# persisted CA can re-sign rotated leaves. `time` supplies the OffsetDateTime
# rcgen uses for cert validity windows.
rcgen = { version = "0.14", features = ["x509-parser"] }
time = { version = "0.3", default-features = false, features = ["std"] }

# Errors / utilities
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Thin libc shim for the operator's effective UID (geteuid) — used to name the
# real UID in PermissionDenied remediation hints.
libc = "0.2"

# Dev / test
serial_test = "3"
insta = { version = "1", features = ["yaml"] }
assert-json-diff = "2"
