[package]
name = "kopiur-controller"
description = "kopiur operator controller: per-CRD reconcilers, finalizers, and scheduling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kopiur-api = { workspace = true }
kopiur-kopia = { workspace = true }
kopiur-mover = { workspace = true }
kopiur-telemetry = { workspace = true }
# `ws` enables pods/exec (AttachedProcess) for SnapshotPolicy workloadExec hooks (ADR §4.8).
# `unstable-runtime` enables `Controller::watches_stream`, so referent Secret/ConfigMap
# watches can be fed a `metadata_watcher` stream (no `.data` over the wire) — kube 3.1 has
# no stable equivalent. Pinned to 3.1; revisit if a stable stream API lands.
kube = { workspace = true, features = ["client", "runtime", "derive", "rustls-tls", "ws", "unstable-runtime"] }
reqwest = { workspace = true }
rustls = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_33"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
axum = { workspace = true }
croner = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
mimalloc = { workspace = true }
# Random UI password generation for `spec.server` Generate auth (written once
# into an operator-owned Secret).
rand = "0.9"

[dev-dependencies]
serial_test = { workspace = true }
tower = { workspace = true }
http = "1"
# Parse minted certs in webhook_tls tests to assert SANs + CA chaining. Matches
# the version rcgen pulls via its `x509-parser` feature.
x509-parser = "0.18"

[features]
integration = []
