[package]
name = "kopiur-e2e"
description = "kopiur end-to-end tests: drive a Helm-deployed operator in kind through full CRD lifecycles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
kopiur-api = { workspace = true }
kube = { workspace = true, features = ["client", "runtime", "derive", "rustls-tls"] }
rustls = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_33"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
# e2e tests are gated so the hermetic `cargo test --workspace` never compiles
# kube-client-dependent test bodies into a cluster run. They are ALSO `#[ignore]`d,
# so even with the feature on they only run with `-- --include-ignored`.
e2e = []
