[package]
name = "kopiur-mover"
description = "Per-Backup/Restore Job binary: invokes kopia and reports status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kopiur-api = { workspace = true }
kopiur-kopia = { workspace = true }
kopiur-telemetry = { workspace = true }
kube = { workspace = true, features = ["client", "rustls-tls"] }
rustls = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_33"] }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[features]
integration = []
