[package]
name = "kopiur-webhook"
description = "axum-based admission webhook server for kopiur CRDs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kopiur-api = { workspace = true }
kopiur-telemetry = { workspace = true }
kube = { workspace = true, features = ["client", "admission"] }
k8s-openapi = { workspace = true, features = ["v1_33"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
json-patch = { workspace = true }
opentelemetry = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
base64 = "0.22"
http-body-util = "0.1"

[features]
integration = []
